add_subdirectory(color)
add_subdirectory(damping)
add_subdirectory(elasticity)
add_subdirectory(forcedensity)
add_subdirectory(heatcapacity)
add_subdirectory(heatconductivity)
add_subdirectory(heatsource)
add_subdirectory(interfaces)
add_subdirectory(massdensity)
add_subdirectory(orientation)
add_subdirectory(permittivity)
add_subdirectory(piezoelectricity)
add_subdirectory(planestrain)
add_subdirectory(pyroelectricity)
add_subdirectory(skeletonrelaxationrate)
add_subdirectory(stressfreestrain)
add_subdirectory(thermalexpansion)
